--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "npx eslint"
+    "lint": "npx eslint",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Sher-Kon/express-mesto-gha.git"
   },
   "author": "Sher",
-  "license": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/Sher-Kon/express-mesto-gha/issues"
   },
@@ -21,10 +22,13 @@
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "eslint": "^8.9.0",
-    "eslint-plugin-react": "^7.28.0"
+    "eslint-plugin-react": "^7.28.0",
+    "nodemon": "^2.0.15"
   },
   "dependencies": {
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.4"
-  }
+    "eslint-plugin-import": "^2.25.4",
+    "express": "^4.17.3"
+  },
+  "keywords": []
 }
