--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "express-mesto-gha",
   "version": "1.0.0",
   "description": "pr-13",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npx eslint",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -27,9 +27,11 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "body-parser": "^1.19.2",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "mongoose": "^6.2.3"
   },
   "keywords": []
 }
